// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a <Button /> component 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 400;
  line-height: 42px;
  cursor: pointer;
  background-color: #e60278;
  color: #ffffff;
  border-width: 0;
  border-style: solid;
  font-size: 24px;
  padding: 0 32px;
}

.c0:focus {
  outline: none;
  z-index: 1;
  box-shadow: 0 0 0 2px rgba(30,144,255,0.75);
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

<button
  className="c0"
/>
`;

exports[`Button should render a disabled button when disabled prop is set 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 400;
  line-height: 42px;
  cursor: pointer;
  background-color: #e60278;
  color: #ffffff;
  border-width: 0;
  border-style: solid;
  font-size: 24px;
  padding: 0 32px;
  opacity: 0.25;
  cursor: not-allowed;
}

.c0:focus {
  outline: none;
  z-index: 1;
  box-shadow: 0 0 0 2px rgba(30,144,255,0.75);
}

.c0:focus::-moz-focus-inner {
  border: 0;
}

<button
  className="c0"
  disabled={true}
/>
`;
